responsividade do header

--- a/index.html
+++ b/index.html
@@ -46,8 +46,18 @@
 
     </header>
 
-    <nav>
+    <nav class="barra-navegacao">
         
+        <ul>
+            <li>Fender</li>
+            <li>Tagima</li>
+            <li>Ibanez</li>
+            <li>Gibson</li>
+            <li>Palhetas</li>
+            <li>Cabos</li>
+            <li>Amplificadores</li>
+        </ul>
+
     </nav>
     
 </body>
