criacao dos card e responsividade da nav bar

--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title>Sadaz</title>
 </head>
 <body>
@@ -59,28 +59,6 @@
         </ul>
 
     </nav>
-
-
-    <main>
-        
-
-        <section class="secao-produtos">
-
-            <h2>Guitarras</h2>
-
-            <div class="produtos-organizados">
-
-                <div class="card-produto"></div>
-                <div class="card-produto"></div>
-                <div class="card-produto"></div>
-                <div class="card-produto"></div>
-                <div class="card-produto"></div>
-
-            </div>
-        </section>
-
-
-    </main>
 
     
 </body>
